--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "console-trace"
-  , "version": "0.2.1"
-  , "description": "Adds a handy `trace` flag to the console object to prepend the file and line number"
-  , "main": "./console-trace"
-  , "dependencies": {
-      "callsite": "*"
-    }
+  "name": "debug-trace",
+  "version": "0.2.2",
+  "description": "Adds a handy `trace` flag to the console object to prepend the file and line number",
+  "main": "./debug-trace",
+  "dependencies": {
+    "callsite": "~1.0.0",
+    "moment": "~2.1.0"
+  }
 }
