before update docker

--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "debug-trace",
-  "version": "2.0.0",
-  "description": "Adds a handy `trace` flag to the console object to prepend the file and line number",
-  "main": "./debug-trace",
-  "browser": "./debug-trace-browser",
-  "dependencies": {
-    "callsite": "~1.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/intesso/debug-trace"
-  },
-  "keywords": [
-    "debug",
-    "trace",
-    "callsite",
-    "formatted console",
-    "format console",
-    "line number",
-    "function name"
-  ],
-  "author": "Andi Neck",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/intesso/debug-trace/issues"
-  },
-  "homepage": "https://github.com/intesso/debug-trace"
+    "name": "debug-trace2",
+    "version": "2.0.4",
+    "description": "Adds a handy `trace` flag to the console object to prepend the file and line number",
+    "main": "./debug-trace",
+    "browser": "./debug-trace-browser",
+    "dependencies": {
+        "callsite": "~1.0.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/intesso/debug-trace"
+    },
+    "keywords": [
+        "debug",
+        "trace",
+        "callsite",
+        "formatted console",
+        "format console",
+        "line number",
+        "function name"
+    ],
+    "author": "Andi Neck",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/intesso/debug-trace/issues"
+    },
+    "homepage": "https://github.com/intesso/debug-trace"
 }
